--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -7,34 +7,27 @@
 # Hebrew messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-#
-#
-#
-#
 # Translations from iso-codes:
-#     Translations taken from ICU SVN on 2007-09-09
-#   Translations from KDE:
-#
-#   Translations taken from KDE:
-#
-#
+# Translations taken from ICU SVN on 2007-09-09
+# Translations taken from KDE:
 # Amit Dovev <debian.translator@gmail.com>, 2007.
 # Meital Bourvine <meitalbourvine@gmail.com>, 2007.
 # Omer Zak <w1@zak.co.il>, 2008, 2010, 2012, 2013.
-# Lior Kaplan <kaplan@debian.org>, 2004-2007, 2008, 2010, 2011, 2015.
-#   Tobias Quathamer <toddy@debian.org>, 2007.
-#   Free Software Foundation, Inc., 2002,2004.
-#   Alastair McKinstry <mckinstry@computer.org>, 2002.
-#   Meni Livne <livne@kde.org>, 2000.
-#   Free Software Foundation, Inc., 2002,2003.
-#   - Meni Livne <livne@kde.org>, 2000.
-#   Meital Bourvine <meitalbourvine@gmail.com>, 2007.
+# Tobias Quathamer <toddy@debian.org>, 2007.
+# Free Software Foundation, Inc., 2002,2004.
+# Alastair McKinstry <mckinstry@computer.org>, 2002.
+# Meni Livne <livne@kde.org>, 2000.
+# Free Software Foundation, Inc., 2002,2003.
+# Meni Livne <livne@kde.org>, 2000.
+# Meital Bourvine <meitalbourvine@gmail.com>, 2007.
+# Lior Kaplan <kaplan@debian.org>, 2004-2007, 2008, 2010, 2011, 2015, 2017.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_he\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-08-19 22:08+0200\n"
+"PO-Revision-Date: 2017-09-02 21:07+0300\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "Language: he\n"
@@ -68,55 +61,50 @@ msgstr "מערכת קבצים מבוססת יומן מסוג btrfs"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "מערכת הקבצים btrfs אינה נתמכת בלי מחיצת /boot נפרדת"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"שורש מערכת הקבצים שלך היא מערכת הקבצים JFS. זה כנראה יגרום בעיות עם מנהל "
-"האתחול שמשמש כברירת המחדל על ידי תוכנית התקנה זאת."
+"שורש מערכת הקבצים שלך היא מערכת הקבצים btrfs. היא אינה נתמכת על ידי מנהל "
+"האתחול שהוגדר כברירת מחדל על ידי תוכנית ההתקנה."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
-msgstr "כדאי שתשמש במחיצת /boot קטנה עם מערכת קבצים אחרת, כגון ext3."
+msgstr "כדאי שתשמש במחיצת /boot קטנה עם מערכת קבצים אחרת, כגון ext4."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "אף מערכת קצבים לא עוגנה על /target"
+msgstr "מערכת הקבצים btrfs אינה נתמכת עבור /boot"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"מערכת קבצים מסוג JFS עוגנה כ-/boot. זה כנראה יגרום בעיות עם מנהל האתחול "
-"שמשמש כברירת המחדל על ידי תוכנית התקנה זאת."
+"מערכת קבצים מסוג btrfs עוגנה כ-/boot. היא אינה נתמכת על ידי מנהל האתחול "
+"שהוגדר כברירת מחדל על ידי תוכנית ההתקנה."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "כדאי שתשמש במערכת קבצים אחרת כמו ext3 למחיצה /boot."
+msgstr "כדאי שתשמש במערכת קבצים אחרת כמו ext4 למחיצה /boot."
