--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+partman-btrfs (38) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Hebrew (he.po) by Lior Kaplan
+  * Albanian (sq.po) by Silva Arapi
+
+ -- Christian Perrier <bubulle@debian.org>  Mon, 18 Sep 2017 07:24:50 +0200
+
 partman-btrfs (37) unstable; urgency=medium
 
   [ Updated translations ]
