--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -4,9 +4,9 @@
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
 # Catalan messages for debian-installer.
-# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2010, 2012, 2015 Software in the Public Interest, Inc.
+# Copyright 2002-2008, 2010, 2012, 2015, 2017 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2006, 2007, 2008, 2010, 2012, 2015.
+# Jordi Mallach <jordi@debian.org>, 2002-2008, 2010, 2012, 2015, 2017.
 # Guillem Jover <guillem@debian.org>, 2005, 2007.
 #
 # Translations from iso-codes:
@@ -18,10 +18,10 @@
 # Traductor: Jordi Ferré <jordiferre@catalonia.altranet.fr>
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer jessie\n"
+"Project-Id-Version: debian-installer buster\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-04-04 01:39+0200\n"
+"PO-Revision-Date: 2017-11-14 10:33+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "Language: ca\n"
@@ -54,61 +54,55 @@ msgstr "Sistema de fitxers transaccional btrfs"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "El sistema de fitxers btrfs no està suportat sense un /boot separat"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"El sistema de fitxers arrel és un sistema de fitxers JFS. Això pot causar "
-"problemes amb el carregador que utilitza de manera predeterminada aquest "
+"El sistema de fitxers arrel és un sistema de fitxers btrfs. Això no està "
+"suportat pel carregador que utilitza de manera predeterminada aquest "
 "instal·lador."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
 "Hauríeu d'emprar una partició /boot petita amb un altre sistema de fitxers, "
-"com ara ext3."
+"com ara ext4."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "No hi ha cap sistema de fitxers muntat en /target"
+msgstr "El sistema de fitxers btrfs no està suportat per a /boot."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Heu muntat un sistema de fitxers JFS a /boot. Això pot causar molt "
-"probablement problemes amb el carregador que utilitza de manera "
-"predeterminada aquest instal·lador."
+"Heu muntat un sistema de fitxers btrfs a /boot. Això no està suportat pel "
+"carregador que utilitza de manera predeterminada aquest instal·lador."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Hauríeu d'emprar un altre sistema de fitxers, com ara ext3, per a la "
+"Hauríeu d'emprar un altre sistema de fitxers, com ara ext4, per a la "
 "partició /boot."
