--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -6,12 +6,10 @@
 # Swedish messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-#
 # Swedish translation by:
 # Per Olofsson <pelle@debian.org>
 # Daniel Nylander <po@danielnylander.se>, 2006.
 # Martin Bagge / brother <brother@bsnet.se>, 2012
-#
 # Translations from iso-codes:
 #   Tobias Quathamer <toddy@debian.org>, 2007.
 #     Translations taken from ICU SVN on 2007-09-09
@@ -20,19 +18,19 @@
 # Christian Rose <menthos@menthos.com>, 2004.
 # Daniel Nylander <po@danielnylander.se>, 2007.
 # Martin Bagge <martin.bagge@bthstudent.se>, 2008, 2016.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-01-26 22:19+0100\n"
-"Last-Translator: Martin Bagge / brother <brother@bsnet.se>\n"
+"PO-Revision-Date: 2017-11-19 22:25+0000\n"
+"Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -76,12 +74,11 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Du bör använda en liten /boot-partition med ett annat filsystem, såsom ext3."
+"Du bör använda en liten /boot-partition med ett annat filsystem, såsom ext4."
 
 #. Type: error
 #. Description
@@ -105,7 +102,6 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "Du bör använda ett annat filsystem, såsom ext3, på /boot-partitionen."
+msgstr "Du bör använda ett annat filsystem, såsom ext4, på /boot-partitionen."
