--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -29,15 +29,15 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2014-01-08 11:31:26 GMT+0100\n"
-"Last-Translator: Judit Gyimesi <judit.gyimesi.x@gmail.com>\n"
+"PO-Revision-Date: 2017-11-26 20:32+0000\n"
+"Last-Translator: Dr. Nagy Elemér Károly <eknagy@omikk.bme.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian."
 "org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n>1;\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -68,7 +68,7 @@ msgstr "btrfs naplózó fájlrendszer"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "A btrfs fájlrendszer gyökérként nem támogatott külön /boot nélkül"
 
 # Type: boolean
 # Description
@@ -77,13 +77,12 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Gyökér fájlrendszere JFS fájlrendszer. Ez gondot okozhat a telepítő által "
-"alapértelmezetten használt boot betöltővel."
+"A gyökér fájlrendszered btrfs fájlrendszer. Ez nem támogatott a telepítő "
+"által alapértelmezetten használt rendszerindítóval."
 
 # Type: boolean
 # Description
@@ -92,12 +91,11 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Inkább más fájlrendszerrel hozzon létre egy kis /boot partíciót, pl.: ext3"
+"Inkább más fájlrendszerrel (pl: ext4) hozz létre egy kis /boot partíciót."
 
 # Type: error
 # Description
@@ -106,9 +104,8 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "Nincs a /target-be csatolt fájlrendszer"
+msgstr "A btrfs fájlrendszer nem támogatott a /boot-on"
 
 # Type: boolean
 # Description
@@ -117,13 +114,12 @@ msgstr "Nincs a /target-be csatolt fájlrendszer"
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"JFS fájlrendszer lett csatolva /boot-ként. Ez valószínűleg gondot fog okozni "
-"a telepítő által használt boot betöltő számára."
+"Egy btrfs fájlrendszert csatoltál fel /boot-ként. Ezt nem támogatja a "
+"telepítő alapértelmezetten használt rendszerindítója."
 
 # Type: boolean
 # Description
@@ -132,8 +128,7 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"E helyett más fájlrendszert, például ext3-at használjon a /boot partícióhoz."
+"Inkább másik fájlrendszert, például ext4-et használj a /boot partícióhoz."
