--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -20,15 +20,15 @@
 # Amanpreet Singh Brar <aalam@users.sf.net>, 2008.
 # Amanpreet Singh Alam <aalam@users.sf.net>, 2008, 2009.
 # Amanpreet Singh Alam[ਆਲਮ] <amanpreetalam@yahoo.com>, 2005.
-# A S Alam <aalam@users.sf.net>, 2009, 2012, 2014.
+# A S Alam <aalam@users.sf.net>, 2009, 2012, 2014, 2017.
 msgid ""
 msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2014-08-21 21:30-0500\n"
-"Last-Translator: A S Alam <aalam@users.sf.net>\n"
-"Language-Team: Punjabi/Panjabi <punjabi-users@lists.sf.net>\n"
+"PO-Revision-Date: 2018-01-04 06:20+0000\n"
+"Last-Translator: Aman ALam <alam.yellow@gmail.com>\n"
+"Language-Team: Punjabi <punjabi-users@lists.sf.net>\n"
 "Language: pa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,11 +77,10 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
-msgstr "ਤੁਹਾਨੂੰ ਛੋਟਾ /boot ਭਾਗ ਹੋਰ ਫਾਇਲ ਸਿਸਟਮ ਨਾਲ ਵਰਤਣਾ ਚਾਹੀਦਾ ਹੈ, ਜਿਵੇਂ ext3।"
+msgstr "ਤੁਹਾਨੂੰ ਹੋਰ ਫਾਇਲ ਸਿਸਟਮ ਨਾਲ ਛੋਟਾ /boot ਭਾਗ ਵਰਤਣਾ ਚਾਹੀਦਾ ਹੈ, ਜਿਵੇਂ ext4।"
 
 #. Type: error
 #. Description
@@ -105,7 +104,6 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "/boot ਪਾਰਟੀਸ਼ਨ ਲਈ ਤੁਹਾਨੂੰ ਹੋਰ ਫਾਇਲ ਸਿਸਟਮ ਵਰਤਣਾ ਚਾਹੀਦਾ ਹੈ, ਜਿਵੇਂ ext3।"
+msgstr "/boot ਪਾਰਟੀਸ਼ਨ ਲਈ ਤੁਹਾਨੂੰ ਹੋਰ ਫਾਇਲ ਸਿਸਟਮ ਵਰਤਣਾ ਚਾਹੀਦਾ ਹੈ, ਜਿਵੇਂ ext4 ਆਦਿ।"
