--- a/debian/po/is.po
+++ b/debian/po/is.po
@@ -9,6 +9,7 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 #
 # Copyright (C) 2010 Free Software Foundation
+# Sveinn í Felli <sv1@fellsnet.is>, 2018.
 #
 # Translations from iso-codes:
 # Copyright (C) 2002,2003, 2010, 2011, 2012 Free Software Foundation, Inc.
@@ -21,18 +22,17 @@
 # Alastair McKinstry <mckinstry@computer.org>, 2002.
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer_packages_po_sublevel1_is\n"
+"Project-Id-Version: Icelandic (Debian Installer)\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2013-10-03 13:25+0000\n"
-"Last-Translator: Sveinn í Felli <sveinki@nett.is>\n"
+"PO-Revision-Date: 2018-01-04 06:20+0000\n"
+"Last-Translator: Sveinn í Felli <sv1@fellsnet.is>\n"
 "Language-Team: Icelandic <translation-team-is@lists.sourceforge.net>\n"
 "Language: is\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-">\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -59,55 +59,50 @@ msgstr "btrfs dagbókarstutt skráakerfi"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "btrfs rótarskráakerfi er ekki stutt á sérstakrar /boot disksneiðar"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Skráakerfið fyrir rótina þína er JFS. Þetta getur valdið vandamálum fyrir "
+"Skráakerfið fyrir rótina þína er btrfs. Þetta getur valdið vandamálum fyrir "
 "ræsistjórann sem þessi uppsetning notar sjálfgefið."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
-msgstr "Þú ættir að nota litla /boot sneið með öðru skráakerfi, t.d. ext3."
+msgstr "Þú ættir að nota litla /boot sneið með öðru skráakerfi, t.d. ext4."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "Ekkert skráarkerfi var tengt við /target"
+msgstr "btrfs skráarkerfi er ekki stutt fyrir /boot"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Þú hefur tengt JFS skráakerfi sem /boot. Þetta getur valdið vandamálum fyrir "
-"ræsistjórann sem þessi uppsetning notar sjálfgefið."
+"Þú hefur tengt btrfs-skráakerfi sem /boot. Þetta getur valdið vandamálum "
+"fyrir ræsistjórann sem þessi uppsetning notar sjálfgefið."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "Þú ættir að nota annað skráakerfi fyrir /boot sneiðina, t.d. ext3."
+msgstr "Þú ættir að nota annað skráakerfi fyrir /boot sneiðina, t.d. ext4."
