[l10n]  Commit changed/added files

--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -19,6 +19,7 @@
 #    Developers do not need to manually edit POT or PO files.
 #
 # Eddy Petrișor <eddy.petrisor@gmail.com>, 2004, 2005, 2006, 2007, 2008, 2009, 2010.
+# Jobava <jobaval10n@gmail.com>, 2018.
 #
 # Translations from iso-codes:
 # Alastair McKinstry <mckinstry@debian.org>, 2004
@@ -36,8 +37,8 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-04-08 22:04+0300\n"
-"Last-Translator: Ioan Eugen Stan <stan.ieugen@gmail.com>\n"
+"PO-Revision-Date: 2018-01-05 19:24+0000\n"
+"Last-Translator: Jobava <jobaval10n@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
@@ -89,13 +90,12 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
 "Ar trebui să utilizați o mică partiție /boot cu un alt sistem de fișiere, "
-"cum ar fi ext3."
+"cum ar fi ext4."
 
 #. Type: error
 #. Description
@@ -120,9 +120,8 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Ar trebui să utilizați un alt sistem de fișiere, ca ext3, pentru partiția /"
+"Ar trebui să utilizați un alt sistem de fișiere, ca ext4, pentru partiția /"
 "boot."
