--- a/debian/po/tg.po
+++ b/debian/po/tg.po
@@ -9,17 +9,17 @@
 #
 # Debian Installer translators, please read the D-I i18n documentation
 # in doc/i18n/i18n.txt
-# Victor Ibragimov <victor.ibragimov@gmail.com>, 2013
+# Victor Ibragimov <victor.ibragimov@gmail.com>, 2013, 2014, 2015, 2016, 2017, 2018
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2014-01-05 13:26+0500\n"
+"PO-Revision-Date: 2018-01-21 20:21+0500\n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: Tajik <victor.ibragimov@gmail.com>\n"
-"Language: Tajik\n"
+"Language: tg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -43,66 +43,61 @@ msgstr "btrfs"
 #. File system name
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
-msgstr "Системаи файлии btrfs journaling"
+msgstr "Низоми файлии btrfs journaling"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "Низоми файлии btrfs root бе имкони /boot-и ҷудо дастгирӣ намешавад"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Системаи файлии шумо системаи файлии JFS мебошад. Ин метавонад сабаби "
-"мушкилиҳо бо худроҳандозии пешфарзи бо ин насбкунанда истифодашаванда шавад."
+"Низоми файлии шумо низоми файлии JFS мебошад. Ин метавонад сабаби мушкилиҳо "
+"бо худроҳандозии пешфарзи бо ин насбкунанда истифодашаванда шавад."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Шумо бояд қисми диски хурдро барои /boot бо системаи файлии дигар, монанди "
+"Шумо бояд қисми диски хурдро барои /boot бо низоми файлии дигар, монанди "
 "ext3, истифода баред."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "Ягон системаи файлӣ дар /target васл нашудааст"
+msgstr "Ягон низоми файлӣ дар /target васл нашудааст"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Шумо системаи файлии JFS-ро ҳамчун /boot васл кардед. Одатан ин бо "
+"Шумо низоми файлии JFS-ро ҳамчун /boot васл кардед. Одатан ин бо "
 "худроҳандозии пешфарзи ин насбкунанда мушкилиҳоро ба вуҷуд меорад."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Шумо бояд системаи файлии дигареро ҳамчун ext3 барои қисми диски /boot "
+"Шумо бояд низоми файлии дигареро ҳамчун ext3 барои қисми диски /boot "
 "истифода баред."
