releasing package partman-btrfs version 44

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+partman-btrfs (44) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Indonesian (id.po) by Al Qalit
+  * Tajik (tg.po) by Victor Ibragimov
+
+ -- Christian Perrier <bubulle@debian.org>  Sun, 18 Feb 2018 09:00:36 +0100
+
 partman-btrfs (43) unstable; urgency=medium
 
   [ Updated translations ]
