--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -4,34 +4,38 @@
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
 # translation of ar.po to Arabic
-# Arabic messages for debian-installer. Copyright (C) 2003 Software in the Public Interest, Inc. This file is distributed under the same license as debian-installer. Ossama M. Khayat <okhayat@yahoo.com>, 2005.
+# Arabic messages for debian-installer. Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+#
+# Ossama Khayat <okhayat@yahoo.com>, 2005 - 2013.
+# Abdelhak Bougouffa, 2017.
+# najib LAARIBI <supnano@gmail.com>, 2018.
+# ButterflyOfFire <ButterflyOfFire@protonmail.com>, 2018.
 #
 # Translations from iso-codes:
 #     Translations taken from ICU SVN on 2007-09-09
 #   Translations from kde-i18n/desktop.po:
 #
-# Ossama M. Khayat <okhayat@yahoo.com>, 2006, 2007, 2008, 2009, 2010.
 #   Abdulaziz Al-Arfaj <alarfaj0@yahoo.com>, 2004.
 #   Alastair McKinstry <mckinstry@computer.org>, 2002.
 #   Free Software Foundation, Inc., 2002, 2004.
 #   Ossama M. Khayat <okhayat@yahoo.com>, 2006, 2008, 2010.
 #   Tobias Quathamer <toddy@debian.org>, 2007.
 #   Mohammad Gamal <f2c2001@yahoo.com>, 2001.
-# Ossama Khayat <okhayat@yahoo.com>, 2011, 2012, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: ar\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2013-09-30 11:24+0300\n"
-"Last-Translator: Ossama Khayat <okhayat@gmail.com>\n"
-"Language-Team: American English <okhayat@gmail.com>\n"
+"PO-Revision-Date: 2018-03-05 16:34+0000\n"
+"Last-Translator: ButterflyOfFire <ButterflyOfFire@protonmail.com>\n"
+"Language-Team: \n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=6; n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n>=3 && n⇐10 ? "
-"3 : n>=11 && n⇐99 ? 4 : 5\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
+"&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
 
 #. Type: text
 #. Description
@@ -76,11 +80,10 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
-msgstr "يفترض بك استعمال جزء /boot صغير مع نظام ملفّاتٍ آخر كـext3."
+msgstr "يفترض منك استعمال صغير لـ /boot مع نظام ملفّاتٍ آخر كـ ext4."
 
 #. Type: error
 #. Description
@@ -104,7 +107,6 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "يفترض بك استعمال نظام ملفّاتٍ آخر كـext3 لجزء /boot."
+msgstr "يفترض منك استعمال نظام ملفّاتٍ آخر كـ ext4 لمساحة جزء /boot."
