--- a/debian/po/cy.po
+++ b/debian/po/cy.po
@@ -21,13 +21,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2012-10-08 21:16-0000\n"
-"Last-Translator: Dafydd Tomos <l10n@da.fydd.org>\n"
+"PO-Revision-Date: 2018-03-19 21:51+0000\n"
+"Last-Translator: Huw Waters <huwwaters@gmail.com>\n"
 "Language-Team: Welsh <>\n"
 "Language: cy\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=6; plural=(n==0) ? 0 : (n==1) ? 1 : (n==2) ? 2 : "
+"(n==3) ? 3 :(n==6) ? 4 : 5;\n"
 
 #. Type: text
 #. Description
@@ -53,9 +55,8 @@ msgstr "System ffeiliau dyddlyfru brtfs"
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid "btrfs root file system not supported without separate /boot"
-msgstr "Dim system ffeiliau wedi ei glymu at /target"
+msgstr "Nid yw system ffeil gwraidd btrfs wedi ei gefnogi heb /boot ar wahân"
 
 #. Type: error
 #. Description
@@ -73,13 +74,12 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
 "Dylech ddefnyddio rhaniad /boot bychan gyda system ffeiliau arall, megis "
-"ext3."
+"ext4."
 
 #. Type: error
 #. Description
@@ -104,9 +104,7 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Dylech ddefnyddio system ffeiliau arall, megis ext3, ar gyfer y rhaniad /"
-"boot."
+"Dylech ddefnyddio system ffeiliau arall, megis ext4, i'r rhaniad /boot."
