--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -33,8 +33,8 @@ msgstr ""
 "Project-Id-Version: debian-installer (level1)\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2018-02-06 04:37+0000\n"
-"Last-Translator: Al Qalit <qal.smith@gmail.com>\n"
+"PO-Revision-Date: 2018-03-04 12:38+0000\n"
+"Last-Translator: Andika Triwidada <andika@gmail.com>\n"
 "Language-Team: Debian Indonesia Translators <debian-l10n-indonesian@lists."
 "debian.org>\n"
 "Language: id\n"
@@ -98,7 +98,7 @@ msgstr ""
 #. :sl2:
 #: ../partman-btrfs.templates:5001
 msgid "btrfs file system not supported for /boot"
-msgstr "Sistem berkas btrfs tak disarankan untuk /boot?"
+msgstr "Sistem berkas btrfs tak didukung untuk /boot"
 
 #. Type: error
 #. Description
