Update Vcs-{Browser,Git} to point to salsa (alioth's replacement).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+partman-btrfs (46) UNRELEASED; urgency=medium
+
+  * Update Vcs-{Browser,Git} to point to salsa (alioth's replacement).
+
+ -- Cyril Brulebois <kibi@debian.org>  Fri, 27 Apr 2018 03:43:04 +0200
+
 partman-btrfs (45) unstable; urgency=medium
 
   [ Updated translations ]
