--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -13,6 +13,7 @@
 # Tapio Lehtonen <tale@debian.org>, 2004 - 2006.
 # Esko Arajärvi <edu@iki.fi>, 2007 - 2008, 2009, 2010.
 # Timo Jyrinki <timo.jyrinki@iki.fi>, 2012.
+# Juhani Numminen <juhaninumminen0@gmail.com>, 2018.
 #
 # Translations from iso-codes:
 # Copyright (C) 2007 Tobias Toedter <t.toedter@gmx.net>.
@@ -25,14 +26,14 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2013-08-19 15:04+0300\n"
-"Last-Translator: Timo Jyrinki <timo.jyrinki@iki.fi>\n"
+"PO-Revision-Date: 2018-05-19 04:36+0000\n"
+"Last-Translator: \n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -76,13 +77,12 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Olisi käytettävä pientä /boot-levyosiota, jossa on joku muu "
-"tiedostojärjestelmä, esimerkiksi ext3. "
+"On suositeltavaa käyttää pientä /boot-osiota, jossa on jokin muu "
+"tiedostojärjestelmä, esimerkiksi ext4."
 
 #. Type: error
 #. Description
@@ -106,9 +106,7 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Käytä /boot-osiolla jotain muuta tiedostojärjestelmää, esimerkiksi ext3 on "
-"sopiva."
+"Käytä /boot-osiolla jotain muuta tiedostojärjestelmää, esimerkiksi ext4:ää."
