--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -27,7 +27,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
 "PO-Revision-Date: 2018-05-19 04:36+0000\n"
-"Last-Translator: \n"
+"Last-Translator: Juhani Numminen\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
