--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-partman-btrfs (46) UNRELEASED; urgency=medium
+partman-btrfs (46) unstable; urgency=medium
 
+  [ Cyril Brulebois ]
   * Update Vcs-{Browser,Git} to point to salsa (alioth's replacement).
 
- -- Cyril Brulebois <kibi@debian.org>  Fri, 27 Apr 2018 03:43:04 +0200
+  [ Updated translations ]
+  * Finnish (fi.po) by Juhani Numminen
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 12 Aug 2018 19:13:51 +0200
 
 partman-btrfs (45) unstable; urgency=medium
 
