--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -17,13 +17,14 @@
 # marce villarino <mvillarino@users.sourceforge.net>, 2009.
 # Marce Villarino <mvillarino@gmail.com>, 2009.
 # Jorge Barreiro <xurxo@findomundo.es>, 2010, 2011, 2012, 2013, 2014, 2015, 2017.
+# mantinan <github@manty.net>, 2018.
 msgid ""
 msgstr ""
 "Project-Id-Version: gl\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2017-06-15 02:16+0200\n"
-"Last-Translator: Jorge Barreiro <xurxo@findomundo.es>\n"
+"PO-Revision-Date: 2018-09-18 21:24+0000\n"
+"Last-Translator: mantinan <github@manty.net>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -57,8 +58,8 @@ msgstr "sistema de ficheiros transaccional btrfs"
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
 msgstr ""
-"Non está soportado un sistema de ficheiros raíz btrfs sen unha partición /"
-"boot separada."
+"btrfs non está soportado como sistema de ficheiros raíz sen unha partición /"
+"boot separada"
 
 #. Type: error
 #. Description
