--- a/debian/po/kn.po
+++ b/debian/po/kn.po
@@ -21,13 +21,14 @@ msgstr ""
 "Project-Id-Version: kn\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2013-09-30 16:17+0530\n"
-"Last-Translator: Prabodh C P (FSMK Localisation Team) <prabodh@fsmk.org>\n"
+"PO-Revision-Date: 2019-08-28 18:10+0000\n"
+"Last-Translator: leela <53352@protonmail.com>\n"
 "Language-Team: Kannada <debian-l10n-kannada@lists.debian.org>\n"
 "Language: kn\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. Type: text
 #. Description
@@ -83,8 +84,9 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
+#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "/boot ಗೆ ಬೆಂಬಲಿಸಲ್ಪಡದ ಕಡತ ವ್ಯವಸ್ಥೆ ಯ ಮಾದರಿಯನ್ನುಯನ್ನು ಬಳಸಬೇಕೆ?"
+msgstr "/boot ಗೆ ಬೆಂಬಲಿಸಲ್ಪಡದ ಕಡತ ವ್ಯವಸ್ಥೆ ಯ ಮಾದರಿಯನ್ನುಯನ್ನು ಬಳಸಬೇಕೆ"
 
 #. Type: error
 #. Description
